--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -2,3 +2,9 @@
     background: white;
     padding: 20pt;
 }
+
+.totalFlex {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
